fix: update custom property for form and label hints to pass WCAG AAA colour contrast failures

--- a/packages/foundations-forms/src/forms.pcss
+++ b/packages/foundations-forms/src/forms.pcss
@@ -1,6 +1,6 @@
 /* Forms */
 
-@import "@coopdigital/foundations-vars";
+@import "@coopdigital/foundations/dist/vars/vars.css";
 
 :root {
   --form-choice-width: 25px;
@@ -72,7 +72,7 @@ label,
 .coop-form__hint {
   display: block;
   margin: 0 0 var(--spacing-8);
-  color: var(--color-grey-dark);
+  color: var(--color-text-alt);
   font-family: var(--font-family);
   font-style: normal;
   font-weight: 400;
